--- a/test/fixtures/user_groups.yml
+++ b/test/fixtures/user_groups.yml
@@ -8,6 +8,7 @@ user_group_00001:
   created_at: 2007-12-13 21:00:01.674976 +09:00
   position: 1
   valid_period_for_new_user: 0
+  number_of_day_to_notify_due_date: 2
 user_group_00002: 
   name: User
   display_name: User
@@ -17,6 +18,8 @@ user_group_00002:
   created_at: 2007-12-23 03:14:40.173954 +09:00
   position: 2
   valid_period_for_new_user: 365
+  number_of_day_to_notify_overdue: 30
+  number_of_time_to_notify_overdue: 6
 user_group_00003: 
   name: Faculty
   display_name: Faculty
