--- a/spec/fixtures/countries.yml
+++ b/spec/fixtures/countries.yml
@@ -2042,3 +2042,18 @@ country_00170:
   note: 
   alpha_2: RW
   alpha_3: RWA
+
+# == Schema Information
+#
+# Table name: countries
+#
+#  id           :integer         not null, primary key
+#  name         :string(255)     not null
+#  display_name :text
+#  alpha_2      :string(255)
+#  alpha_3      :string(255)
+#  numeric_3    :string(255)
+#  note         :text
+#  position     :integer
+#
+
