--- a/spec/fixtures/roles.yml
+++ b/spec/fixtures/roles.yml
@@ -23,3 +23,18 @@ role_00004:
   id: 4
   score: 4
   note: 
+
+# == Schema Information
+#
+# Table name: roles
+#
+#  id           :integer         not null, primary key
+#  name         :string(255)     not null
+#  display_name :string(255)
+#  note         :text
+#  created_at   :datetime
+#  updated_at   :datetime
+#  score        :integer         default(0), not null
+#  position     :integer
+#
+
