--- a/config/configatron/production.rb.sample
+++ b/config/configatron/production.rb.sample
@@ -1,7 +1,8 @@
 # Override your default settings for the Production environment here.
 # 
 # Example:
-#   configatron.file.storage = :s3
+#   configatron.uploaded_file.storage = :s3
+
 #configatron.uploaded_file.storage = :s3
 
 configatron.amazon.access_key = 'REPLACE_WITH_YOUR_AMAZON_ACCESS_KEY'
