--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
-.bundle/
-log/*.log
-pkg/
-test/dummy/db/*.sqlite3
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
+*.rbc
+*.sassc
+.sass-cache
+capybara-*.html
+.rspec
+/.bundle
+/vendor/bundle
+/log/*
+/tmp/*
+/db/*.sqlite3
+/public/system/*
+/coverage/
+/spec/tmp/*
+**.orig
+rerun.txt
+pickle-email-*.html
+/spec/dummy/db/*.sqlite3
+/spec/dummy/log/*
+/spec/dummy/solr/*
+/spec/dummy/tmp/
