renamed Patron to Agent

--- a/spec/fixtures/picture_files.yml
+++ b/spec/fixtures/picture_files.yml
@@ -35,7 +35,7 @@ picture_file_00004:
   picture_file_size: 7028
   id: 4
   picture_file_name: overlay_spinner_geometry.gif
-  picture_attachable_type: Patron
+  picture_attachable_type: Agent
   picture_attachable_id: 1
   created_at: 2007-12-22 15:06:30.464930 +09:00
   position: 4
