updated fixture files

--- a/spec/fixtures/manifestations.yml
+++ b/spec/fixtures/manifestations.yml
@@ -1871,7 +1871,6 @@ manifestation_00216:
 #  volume_number                   :integer
 #  issue_number                    :integer
 #  serial_number                   :integer
-#  ndc                             :string(255)
 #  content_type_id                 :integer          default(1)
 #  year_of_publication             :integer
 #  attachment_meta                 :text
@@ -1879,5 +1878,6 @@ manifestation_00216:
 #  fulltext_content                :boolean
 #  doi                             :string(255)
 #  periodical                      :boolean
+#  statement_of_responsibility     :text
 #
 
