--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,35 @@
 language: ruby
 rvm:
-- 1.9.3
-- 2.0.0
-- 2.1.3
+  - 1.9.3
+  - 2.0.0
+  - 2.1.5
 before_script:
-- mysql -e 'create database enju_test'
-- psql -c 'create database enju_test;' -U postgres
-- bundle exec rake db:migrate
+  - mysql -e 'create database enju_test'
+  - psql -c 'create database enju_test;' -U postgres
+  - bundle exec rake db:migrate
 services:
-- redis-server
+  - redis-server
 gemfile:
-- gemfiles/rails3_2.gemfile
-- gemfiles/rails4_1.gemfile
+  - gemfiles/rails3_2.gemfile
+  - gemfiles/rails4_1.gemfile
+  - gemfiles/rails4_2.gemfile
 env:
-- DB=sqlite
-- DB=mysql
-- DB=postgresql
+  - DB=sqlite
+  - DB=mysql
+  - DB=postgresql
 matrix:
   exclude:
   - rvm: 1.9.3
     gemfile: gemfiles/rails4_1.gemfile
-  - rvm: 2.1.3
+  - rvm: 1.9.3
+    gemfile: gemfiles/rails4_2.gemfile
+  - rvm: 2.0.0
+    gemfile: gemfiles/rails3_2.gemfile
+  - rvm: 2.0.0
+    gemfile: gemfiles/rails4_2.gemfile
+  - rvm: 2.1.5
     gemfile: gemfiles/rails3_2.gemfile
 notifications:
   slack:
     secure: Vh6DOCDFUt98CzsyurQYaBH89FJCb/K14duF9qpU0dtwdF/o4Weo/SOH6tlaDMj9mU8c3TA2Pqy/Xu2orgTVu4Q4Q8Nh4CMEi8xD3O3CyWXIx1ar/Sf+zUl6hAt/9PyWeDalmsA7knZGUw5kq+O/wcbMYDGo7+Q9XWcSnXupzrw=
+sudo: false
