--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.5
+  - 2.2.0-rc1
 before_script:
   - mysql -e 'create database enju_test'
   - psql -c 'create database enju_test;' -U postgres
@@ -29,6 +30,10 @@ matrix:
     gemfile: gemfiles/rails4_2.gemfile
   - rvm: 2.1.5
     gemfile: gemfiles/rails3_2.gemfile
+  - rvm: 2.2.0-rc1
+    gemfile: gemfiles/rails3_2.gemfile
+  - rvm: 2.2.0-rc1
+    gemfile: gemfiles/rails4_1.gemfile
 notifications:
   slack:
     secure: Vh6DOCDFUt98CzsyurQYaBH89FJCb/K14duF9qpU0dtwdF/o4Weo/SOH6tlaDMj9mU8c3TA2Pqy/Xu2orgTVu4Q4Q8Nh4CMEi8xD3O3CyWXIx1ar/Sf+zUl6hAt/9PyWeDalmsA7knZGUw5kq+O/wcbMYDGo7+Q9XWcSnXupzrw=
