added dummy files

--- a/spec/fixtures/agents.yml
+++ b/spec/fixtures/agents.yml
@@ -288,8 +288,8 @@ agent_00202:
 #  full_name                           :string(255)
 #  full_name_transcription             :text
 #  full_name_alternative               :text
-#  created_at                          :datetime         not null
-#  updated_at                          :datetime         not null
+#  created_at                          :datetime
+#  updated_at                          :datetime
 #  deleted_at                          :datetime
 #  zip_code_1                          :string(255)
 #  zip_code_2                          :string(255)
@@ -316,7 +316,6 @@ agent_00202:
 #  note                                :text
 #  required_role_id                    :integer          default(1), not null
 #  required_score                      :integer          default(0), not null
-#  state                               :string(255)
 #  email                               :text
 #  url                                 :text
 #  full_name_alternative_transcription :text
@@ -324,4 +323,3 @@ agent_00202:
 #  death_date                          :string(255)
 #  agent_identifier                    :string(255)
 #
-
