--- a/spec/fixtures/creates.yml
+++ b/spec/fixtures/creates.yml
@@ -57,8 +57,7 @@ create_00104:
 #  agent_id       :integer          not null
 #  work_id        :integer          not null
 #  position       :integer
-#  created_at     :datetime         not null
-#  updated_at     :datetime         not null
+#  created_at     :datetime
+#  updated_at     :datetime
 #  create_type_id :integer
 #
-
