--- a/spec/fixtures/import_requests.yml
+++ b/spec/fixtures/import_requests.yml
@@ -18,7 +18,6 @@ two:
 #  isbn             :string(255)
 #  manifestation_id :integer
 #  user_id          :integer
-#  created_at       :datetime         not null
-#  updated_at       :datetime         not null
+#  created_at       :datetime
+#  updated_at       :datetime
 #
-
