--- a/spec/fixtures/picture_files.yml
+++ b/spec/fixtures/picture_files.yml
@@ -51,8 +51,8 @@ picture_file_00004:
 #  title                   :text
 #  thumbnail               :string(255)
 #  position                :integer
-#  created_at              :datetime         not null
-#  updated_at              :datetime         not null
+#  created_at              :datetime
+#  updated_at              :datetime
 #  picture_file_name       :string(255)
 #  picture_content_type    :string(255)
 #  picture_file_size       :integer
@@ -60,4 +60,3 @@ picture_file_00004:
 #  picture_meta            :text
 #  picture_fingerprint     :string(255)
 #
-
