--- a/spec/fixtures/produces.yml
+++ b/spec/fixtures/produces.yml
@@ -141,8 +141,7 @@ produce_00202:
 #  agent_id         :integer          not null
 #  manifestation_id :integer          not null
 #  position         :integer
-#  created_at       :datetime         not null
-#  updated_at       :datetime         not null
+#  created_at       :datetime
+#  updated_at       :datetime
 #  produce_type_id  :integer
 #
-
