--- a/spec/fixtures/realizes.yml
+++ b/spec/fixtures/realizes.yml
@@ -78,8 +78,7 @@ realize_00010:
 #  agent_id        :integer          not null
 #  expression_id   :integer          not null
 #  position        :integer
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
+#  created_at      :datetime
+#  updated_at      :datetime
 #  realize_type_id :integer
 #
-
