--- a/spec/fixtures/agent_relationship_types.yml
+++ b/spec/fixtures/agent_relationship_types.yml
@@ -2,19 +2,19 @@
 
 agent_relationship_type_00001:
   id: 1
-  name: See also
+  name: see_also
   display_name: See also
   note: 
   position: 1
 agent_relationship_type_00002:
   id: 2
-  name: Member
+  name: member
   display_name: Member
   note: 
   position: 2
 agent_relationship_type_00003:
   id: 3
-  name: Child
+  name: child
   display_name: Child
   note: 
   position: 3
@@ -28,7 +28,6 @@ agent_relationship_type_00003:
 #  display_name :text
 #  note         :text
 #  position     :integer
-#  created_at   :datetime         not null
-#  updated_at   :datetime         not null
+#  created_at   :datetime
+#  updated_at   :datetime
 #
-
