--- a/spec/fixtures/agent_relationships.yml
+++ b/spec/fixtures/agent_relationships.yml
@@ -18,8 +18,7 @@ two:
 #  parent_id                  :integer
 #  child_id                   :integer
 #  agent_relationship_type_id :integer
-#  created_at                 :datetime         not null
-#  updated_at                 :datetime         not null
+#  created_at                 :datetime
+#  updated_at                 :datetime
 #  position                   :integer
 #
-
