--- a/spec/fixtures/create_types.yml
+++ b/spec/fixtures/create_types.yml
@@ -41,7 +41,6 @@ illustrator:
 #  display_name :text
 #  note         :text
 #  position     :integer
-#  created_at   :datetime         not null
-#  updated_at   :datetime         not null
+#  created_at   :datetime
+#  updated_at   :datetime
 #
-
