--- a/spec/fixtures/donates.yml
+++ b/spec/fixtures/donates.yml
@@ -25,7 +25,6 @@ donate_00003:
 #  id         :integer          not null, primary key
 #  agent_id   :integer          not null
 #  item_id    :integer          not null
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  created_at :datetime
+#  updated_at :datetime
 #
-
