--- a/spec/fixtures/form_of_works.yml
+++ b/spec/fixtures/form_of_works.yml
@@ -33,7 +33,6 @@ form_of_work_00003:
 #  display_name :text
 #  note         :text
 #  position     :integer
-#  created_at   :datetime         not null
-#  updated_at   :datetime         not null
+#  created_at   :datetime
+#  updated_at   :datetime
 #
-
