--- a/spec/fixtures/frequencies.yml
+++ b/spec/fixtures/frequencies.yml
@@ -1,74 +1,58 @@
 --- 
-frequency_00006: 
-  name: bimonthly
-  display_name: !binary |
-    5pes5YiK
-
-  updated_at: 2007-12-31 21:40:49.776669 +09:00
-  id: 6
-  created_at: 2007-12-31 21:40:49.776669 +09:00
-  position: 6
-frequency_00007: 
-  name: yearly
-  display_name: !binary |
-    5bm05YiK
-
-  updated_at: 2007-12-31 21:41:03.004736 +09:00
-  id: 7
-  created_at: 2007-12-31 21:41:03.004736 +09:00
-  position: 7
 frequency_00001: 
-  name: not refularly
-  display_name: !binary |
-    5pel5YiK
-
-  updated_at: 2007-12-31 21:39:45.737531 +09:00
+  name: unknown
+  display_name: "en: unknown\r\n\
+    ja: 不明・不定期刊"
   id: 1
-  created_at: 2007-12-31 21:39:45.737531 +09:00
   position: 1
 frequency_00002: 
   name: daily
-  display_name: !binary |
-    6YCx5YiK
-
-  updated_at: 2007-12-31 21:39:54.980787 +09:00
+  display_name: "en: daily\r\n\
+    ja: 日刊"
   id: 2
-  created_at: 2007-12-31 21:39:54.980787 +09:00
   position: 2
 frequency_00003: 
   name: weekly
-  display_name: !binary |
-    6ZqU6YCx5YiK
-
-  updated_at: 2007-12-31 21:40:11.112040 +09:00
+  display_name: "en: weekly\r\n\
+    ja: 週刊"
   id: 3
-  created_at: 2007-12-31 21:40:11.112040 +09:00
   position: 3
 frequency_00004: 
   name: biweekly
-  display_name: !binary |
-    5pyI5YiK
-
-  updated_at: 2007-12-31 21:40:18.803661 +09:00
+  display_name: "en: biweekly\r\n\
+    ja: 隔週刊"
   id: 4
-  created_at: 2007-12-31 21:40:18.803661 +09:00
   position: 4
 frequency_00005: 
   name: monthly
-  display_name: !binary |
-    6ZqU5pyI5YiK
-
-  updated_at: 2007-12-31 21:40:31.247081 +09:00
+  display_name: "en: monthly\r\n\
+    ja: 月刊"
   id: 5
-  created_at: 2007-12-31 21:40:31.247081 +09:00
   position: 5
 frequency_00006: 
-  name: other
-  display_name: Other
-  updated_at: 2007-12-31 21:40:31.247081 +09:00
+  name: bimonthly
+  display_name: "en: bimonthly\r\n\
+    ja: 隔月刊"
   id: 6
-  created_at: 2007-12-31 21:40:31.247081 +09:00
   position: 6
+frequency_00007: 
+  name: quarterly
+  display_name: "en: quarterly\r\n\
+    ja: 季刊"
+  id: 7
+  position: 7
+frequency_00008: 
+  name: yearly
+  display_name: "en: yearly\r\n\
+    ja: 年刊"
+  id: 8
+  position: 8
+frequency_00009: 
+  name: biyearly
+  display_name: "en: biyearly\r\n\
+    ja: 隔年刊"
+  id: 9
+  position: 9
 
 # == Schema Information
 #
@@ -79,7 +63,6 @@ frequency_00006:
 #  display_name :text
 #  note         :text
 #  position     :integer
-#  created_at   :datetime         not null
-#  updated_at   :datetime         not null
+#  created_at   :datetime
+#  updated_at   :datetime
 #
-
