--- a/spec/fixtures/licenses.yml
+++ b/spec/fixtures/licenses.yml
@@ -23,7 +23,6 @@ two:
 #  display_name :string(255)
 #  note         :text
 #  position     :integer
-#  created_at   :datetime         not null
-#  updated_at   :datetime         not null
+#  created_at   :datetime
+#  updated_at   :datetime
 #
-
