--- a/spec/fixtures/manifestation_relationships.yml
+++ b/spec/fixtures/manifestation_relationships.yml
@@ -23,8 +23,7 @@ serial:
 #  parent_id                          :integer
 #  child_id                           :integer
 #  manifestation_relationship_type_id :integer
-#  created_at                         :datetime         not null
-#  updated_at                         :datetime         not null
+#  created_at                         :datetime
+#  updated_at                         :datetime
 #  position                           :integer
 #
-
