--- a/spec/fixtures/manifestations.yml
+++ b/spec/fixtures/manifestations.yml
@@ -1815,6 +1815,15 @@ manifestation_00216:
   created_at: 2010-03-19 13:00:00 +9:00
   required_role_id: 1
   repository_content: false
+manifestation_00217:
+  carrier_type_id: 1
+  language_id: 77
+  updated_at: 2014-12-20 16:44:00 +09:00
+  original_title: "VRML2.0 : 3Dサイバースペース構築言語"
+  content_type_id: 1
+  year_of_publication: 1996
+  statement_of_responsibility: "三浦憲二郎著"
+  id: 217
 
 # == Schema Information
 #
@@ -1828,13 +1837,12 @@ manifestation_00216:
 #  manifestation_identifier        :string(255)
 #  date_of_publication             :datetime
 #  date_copyrighted                :datetime
-#  created_at                      :datetime         not null
-#  updated_at                      :datetime         not null
+#  created_at                      :datetime
+#  updated_at                      :datetime
 #  deleted_at                      :datetime
 #  access_address                  :string(255)
 #  language_id                     :integer          default(1), not null
 #  carrier_type_id                 :integer          default(1), not null
-#  extent_id                       :integer          default(1), not null
 #  start_page                      :integer
 #  end_page                        :integer
 #  height                          :integer
@@ -1875,7 +1883,9 @@ manifestation_00216:
 #  attachment_meta                 :text
 #  month_of_publication            :integer
 #  fulltext_content                :boolean
-#  doi                             :string(255)
-#  serial                      :boolean
+#  serial                          :boolean
 #  statement_of_responsibility     :text
+#  publication_place               :text
+#  extent                          :text
+#  dimensions                      :text
 #
