--- a/spec/fixtures/medium_of_performances.yml
+++ b/spec/fixtures/medium_of_performances.yml
@@ -2,14 +2,14 @@
 
 one:
   id: 1
-  name: Unaccompanied
+  name: unaccompanied
   display_name: Unaccompanied
   note: MyText
   position: 1
 
 two:
   id: 2
-  name: Accompanied
+  name: accompanied
   display_name: Accompanied
   note: MyText
   position: 2
@@ -23,7 +23,6 @@ two:
 #  display_name :text
 #  note         :text
 #  position     :integer
-#  created_at   :datetime         not null
-#  updated_at   :datetime         not null
+#  created_at   :datetime
+#  updated_at   :datetime
 #
-
