--- a/spec/fixtures/owns.yml
+++ b/spec/fixtures/owns.yml
@@ -20,7 +20,6 @@ own_00002:
 #  agent_id   :integer          not null
 #  item_id    :integer          not null
 #  position   :integer
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  created_at :datetime
+#  updated_at :datetime
 #
-
