--- a/spec/fixtures/resource_import_files.yml
+++ b/spec/fixtures/resource_import_files.yml
@@ -34,10 +34,11 @@ resource_import_file_00003:
 #  resource_import_content_type :string(255)
 #  resource_import_file_size    :integer
 #  resource_import_updated_at   :datetime
-#  created_at                   :datetime         not null
-#  updated_at                   :datetime         not null
+#  created_at                   :datetime
+#  updated_at                   :datetime
 #  edit_mode                    :string(255)
 #  resource_import_fingerprint  :string(255)
 #  error_message                :text
+#  user_encoding                :string(255)
+#  default_shelf_id             :integer
 #
-
