--- a/spec/fixtures/series_statements.yml
+++ b/spec/fixtures/series_statements.yml
@@ -39,8 +39,8 @@ five:
 #  title_subseries                    :text
 #  numbering_subseries                :text
 #  position                           :integer
-#  created_at                         :datetime         not null
-#  updated_at                         :datetime         not null
+#  created_at                         :datetime
+#  updated_at                         :datetime
 #  title_transcription                :text
 #  title_alternative                  :text
 #  series_statement_identifier        :string(255)
@@ -53,4 +53,3 @@ five:
 #  series_master                      :boolean
 #  root_manifestation_id              :integer
 #
-
