--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -3,9 +3,10 @@ admin:
   updated_at: 2008-05-31 13:16:30.163731 +09:00
   encrypted_password: $2a$10$vHohD1WflnTIqAa8zMkF9evwAgIZRw3XuR4d3bi29M.jph/MB/AJi
   id: 1
-  username: admin
+  username: enjuadmin
   email: tanabe@kamata.lib.teu.ac.jp
   created_at: 2007-11-19 16:58:32.111941 +09:00
+  save_checkout_history: true
 librarian1: 
   updated_at: 2008-05-31 12:41:16.337474 +09:00
   encrypted_password: $2a$10$9O2VuTccN4gHq36ARg0QReSrb1D7WrBBhZZ759RM9moHbB0W5zCzS
@@ -13,6 +14,7 @@ librarian1:
   username: librarian1
   email: librarian1@kamata.lib.teu.ac.jp
   created_at: 2007-11-19 16:58:33.172441 +09:00
+  save_checkout_history: false
 user1: 
   updated_at: 2008-05-31 13:02:25.101261 +09:00
   encrypted_password: $2a$10$JthS59A0BNkDOoFpCXM0V.GhhffKaoWKbzpPahYp/vTFrOyM7h/uW
@@ -20,6 +22,7 @@ user1:
   username: user1
   email: user1@kamata.lib.teu.ac.jp
   created_at: 2007-11-19 16:58:34.637413 +09:00
+  save_checkout_history: true
 librarian2: 
   updated_at: 2008-05-31 12:42:23.340575 +09:00
   encrypted_password: $2a$10$YmmTGrYQ1Ir6oc7wXnp.GuNeO1eYLoP3sv8wMSIrTdaGw2BPwRrpS
