--- a/spec/fixtures/library_groups.yml
+++ b/spec/fixtures/library_groups.yml
@@ -7,6 +7,7 @@ one:
   note: 
   my_networks: 0.0.0.0/0
   url: "http://localhost:3000/"
+  settings: "{\"max_number\":200, \"family_name_first\":true}"
 
 
 # == Schema Information
