--- a/spec/fixtures/library_groups.yml
+++ b/spec/fixtures/library_groups.yml
@@ -12,7 +12,11 @@ one:
   login_banner: "*Next-L Enju*"
   admin_networks: "0.0.0.0/0\r\n\
     ::/0"
-  settings: <% Marshal.dump({max_number_of_results: 200, family_name_first: true, amazon_hostname: "www.amazon.co.jp", book_jacket_source: "google", screenshot_generator: "mozshot"}) %>
+  settings: <% if Rails::VERSION::MAJOR > 3 %>
+    "{\"max_number_of_results\":200,\"family_name_first\":true,\"book_jacket_source\":\"google\",\"screenshot_generator\":\"mozshot\"}"
+  <% else %>
+    "---\n:max_number_of_results: 200\n:family_name_first: true\n:book_jacket_source: \"google\"\n:screenshot_generator: \"mozshot\""
+  <% end %>
 
 # == Schema Information
 #
